# company_insight_assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.mkdocs  LICENSE  Makefile  README.md  docker-compose.yml  install-extensions.sh  mkdocs.yml  ollama_setup.sh  pyproject.toml  pytest.ini  rag_scraper_prototype.ipynb  requirements.txt  verify_ollama.sh
.github/workflows/: ci.yml
app/: crud.py  database.py  logging_config.py  main.py  models.py  rag_model.py  schemas.py
company_insight_assistant/: __init__.py  dataset.py  features.py  plots.py
company_insight_assistant/modeling/: predict.py  train.py
docs/: index.md  mkdocs.yml  rag_project.md
docs/12-factor-app/: admin.md  backing.md  build.md  codebase.md  concurrency.md  config.md  dependency.md  disposability.md  index.md  logging.md  overview.md  parity.md  port.md  stateless.md
docs/css/: extra.css
scripts/: scrape_index_jobs.py
tests/: test.py  test_rag_model.py
